Try to fix images being too large

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -13,3 +13,7 @@ main a {
 a:hover {
   @apply text-grey-darker;
 }
+
+img {
+  max-width: 100%;
+}
